# hrishi-feeds

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dispatch.yml  poll.yml
data/: books.json  movies.json
scripts/: _common.py  poll_goodreads.py  poll_letterboxd.py  seed_from_csv.py  seed_letterboxd_scrape.py
